--- a/Portfolio/stylesheet/style.css
+++ b/Portfolio/stylesheet/style.css
@@ -542,6 +542,13 @@ hr {
   z-index: -1;
   display: flex;
   height: 100vh;
+  min-width: 320px;
+}
+
+@media screen and (max-width: 720px) {
+  .certificates img{
+    width: 120px;
+  }
 }
 
 .carousel {
